@@ -1,3 +1,9 @@
+Sun Aug 23 10:47:16 BST 2009  Colin Watson  <cjwatson@debian.org>
+
+	* src/README.zsoelim: Remove, merging text into ...
+	* src/zsoelim.l: ... here.
+	* src/Makefile.am (EXTRA_DIST): Remove README.zsoelim.
+
 Sun Aug 23 10:36:28 BST 2009  Colin Watson  <cjwatson@debian.org>
 
 	Remove the old set-id wrapper, which hasn't been recommended for
